# aitu-keeper

./: .gitignore  Cargo.toml  Dockerfile  Procfile  README.md  docker-compose.yml
.github/workflows/: rust.yml
src/: config.rs  lib.rs  main.rs
src/adapters/spi/: mod.rs
src/application/controllers/: user_controller.rs
src/controllers/: app_state.rs  course_controller.rs  deadline_controller.rs  grade_controller.rs  mod.rs  user_controller.rs
src/controllers/moodle_client/: mod.rs  moodle_client.rs
src/controllers/shared/: app_state.rs  errors.rs  handler_errors.rs  mod.rs
src/domain/: mod.rs
src/domain/data_providers/: data_provider_abstract.rs  mod.rs  notification_provider_abstract.rs
src/infrastructure/: app_setup.rs  database.rs  db_connection.rs  mod.rs
src/models/: course.rs  deadline.rs  errors.rs  grade.rs  mod.rs  notification.rs  token.rs  user.rs
src/models/grade/: mod.rs  (+1 more)
src/repositories/: course_repository.rs  data_repository.rs  db_mappers.rs  deadline_repository.rs  errors.rs  grade_overview_repository.rs  grade_repository.rs  mod.rs  token_repository.rs  user_repository.rs
src/services/: course_service.rs  data_service.rs  data_service_interfaces.rs  deadline_service.rs  errors.rs  event_producer_interface.rs  grade_overview_service.rs  grade_service.rs  http_client.rs  interfaces.rs  mod.rs  moodle_client.rs  notification_service.rs  notification_service_interfaces.rs  producer_service.rs  producer_service_interfaces.rs  provider_interfaces.rs  token_service.rs  user_service.rs
tests/: data_service_tests.rs  mock_data.rs  mod.rs
(+76 files in other folders)
