[package]
name = "aitu-web-app"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
async-trait = "0.1.85"
mongodb = "3.2.0"
reqwest = { version = "0.12.12", features = ["json"] }
serde = "1.0.217"
tokio = "1.43.0"
futures-util = "0.3.31"
regex = "1.11.1"
chrono = "0.4.39"
fcm-rs = "0.2.0"
futures = "0.3.31"
anyhow = "1.0.95"
dotenv = "0.15.0"
base64 = "0.22.1"
log = "0.4.27"
env_logger = "0.11.8"
thiserror = "2.0.12"
serde_json = "1.0.140"
# console-subscriber = "0.4.1"

[profile.release]
debug = 1
